Wrapper spacing fix

--- a/mercury/inc/fourcrowns-fields/assets/css/custom-style.css
+++ b/mercury/inc/fourcrowns-fields/assets/css/custom-style.css
@@ -211,6 +211,7 @@ html {
 .space-page-wrapper {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 0 25px!important;
 }
 
 .space-page-content a:hover, .space-header-height .space-header-menu ul.main-menu li ul.sub-menu li a:hover {
@@ -569,7 +570,6 @@ a.btn:hover {
     gap: 2rem;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 3rem 0;
 }
 
 .listing-column {
